crates/strider-analyze/tests/snapshots/v3__aarch64__calls__repeat_call_pair.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x8d0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "9" -> "1" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "10" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x8d0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "12" -> "10" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nx3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v15" [color="#888888", style=dashed];
  "v15" -> "10" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nx4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v16" [color="#888888", style=dashed];
  "v16" -> "10" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "17" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "10" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "10" -> "v19" [color="#888888", style=dashed];
  "v19" -> "17" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "10" -> "v20" [color="#888888", style=dashed];
  "v20" -> "17" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "10" -> "v21" [color="#888888", style=dashed];
  "v21" -> "17" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "18" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "22" -> "18" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v25" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "10" -> "v25" [color="#888888", style=dashed];
  "v25" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v26" [label="Post Call\nx2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "10" -> "v26" [color="#888888", style=dashed];
  "v26" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "14" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "27" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v28" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v28" [color="#888888", style=dashed];
  "v28" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "29" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v16" -> "29" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "30" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v15" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "31" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "4" [label="init\nx0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "32" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "5" -> "32" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "5" [label="init\nx1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="init\nx2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "33" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "34" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v35" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v35" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "36" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v37" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v37" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "36" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "39" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
